routetable.tf
resource "aws_route_table" "my-route" {
  vpc_id = aws_vpc.my-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my-igw.id
  }

  tags = {
    name = "my-route"
  }
}

resource "aws_route_table" "myprivate" {
  vpc_id = aws_vpc.my-vpc.id
 tags = {
    name = "myprivate"
  }
}
